// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<Fragment>
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#16C5C0",
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#16C5C0",
        },
        "_styleName": "fillColor",
      }
    }
    swatches={
      Array [
        "#16C5C0",
        "#A6EDEA",
        "#61A2FF",
        "#BFDBFF",
        "#EE72A6",
        "#FFC7DB",
        "#F6726A",
        "#FFC9C2",
        "#EAAE01",
        "#FCD883",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#119793",
      }
    }
    disabled={false}
    disabledBy="lineWidth"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#119793",
        },
        "_styleName": "lineColor",
      }
    }
    swatches={
      Array [
        "#119793",
        "#7ce4e0",
        "#2e84ff",
        "#8cbeff",
        "#e94489",
        "#ff94ba",
        "#f3443a",
        "#ff9c8f",
        "#b78801",
        "#fbc851",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 10,
        "minSize": 1,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 1,
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 1,
        },
        "_styleName": "lineWidth",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "value": "",
      }
    }
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticTextProperty {
        "_options": Object {
          "value": "",
        },
        "_styleName": "labelText",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <LabelZoomRangeEditor
    disabled={true}
    disabledBy="labelText"
    handlePropertyChange={[Function]}
    styleProperty={
      LabelZoomRangeProperty {
        "_layerMaxZoom": 24,
        "_layerMinZoom": 0,
        "_options": Object {
          "maxZoom": 24,
          "minZoom": 0,
          "useLayerZoomRange": true,
        },
        "_styleName": "labelZoomRange",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#000000",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#000000",
        },
        "_styleName": "labelColor",
      }
    }
    swatches={
      Array [
        "#119793",
        "#7ce4e0",
        "#2e84ff",
        "#8cbeff",
        "#e94489",
        "#ff94ba",
        "#f3443a",
        "#ff9c8f",
        "#b78801",
        "#fbc851",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 32,
        "minSize": 7,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 14,
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 14,
        },
        "_styleName": "labelSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#FFFFFF",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={
      Array [
        Object {
          "isUnsupported": false,
          "label": "field0",
          "name": "field0",
          "origin": "source",
          "supportsAutoDomain": true,
          "type": "string",
        },
      ]
    }
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#FFFFFF",
        },
        "_styleName": "labelBorderColor",
      }
    }
    swatches={
      Array [
        "#119793",
        "#7ce4e0",
        "#2e84ff",
        "#8cbeff",
        "#e94489",
        "#ff94ba",
        "#f3443a",
        "#ff9c8f",
        "#b78801",
        "#fbc851",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelBorderSizeEditor
    disabled={true}
    disabledBy="labelText"
    handlePropertyChange={[Function]}
    styleProperty={
      LabelBorderSizeProperty {
        "_labelSizeProperty": StaticSizeProperty {
          "_options": Object {
            "size": 14,
          },
          "_styleName": "labelSize",
        },
        "_options": Object {
          "size": "SMALL",
        },
        "_styleName": "labelBorderSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    display="columnCompressed"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Apply global time to style metadata requests"
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render with no style fields 1`] = `
<Fragment>
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#16C5C0",
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#16C5C0",
        },
        "_styleName": "fillColor",
      }
    }
    swatches={
      Array [
        "#16C5C0",
        "#A6EDEA",
        "#61A2FF",
        "#BFDBFF",
        "#EE72A6",
        "#FFC7DB",
        "#F6726A",
        "#FFC9C2",
        "#EAAE01",
        "#FCD883",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#119793",
      }
    }
    disabled={false}
    disabledBy="lineWidth"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#119793",
        },
        "_styleName": "lineColor",
      }
    }
    swatches={
      Array [
        "#119793",
        "#7ce4e0",
        "#2e84ff",
        "#8cbeff",
        "#e94489",
        "#ff94ba",
        "#f3443a",
        "#ff9c8f",
        "#b78801",
        "#fbc851",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 10,
        "minSize": 1,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 1,
      }
    }
    disabled={false}
    disabledBy="iconSize"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 1,
        },
        "_styleName": "lineWidth",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "value": "",
      }
    }
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticTextProperty {
        "_options": Object {
          "value": "",
        },
        "_styleName": "labelText",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <LabelZoomRangeEditor
    disabled={true}
    disabledBy="labelText"
    handlePropertyChange={[Function]}
    styleProperty={
      LabelZoomRangeProperty {
        "_layerMaxZoom": 24,
        "_layerMinZoom": 0,
        "_options": Object {
          "maxZoom": 24,
          "minZoom": 0,
          "useLayerZoomRange": true,
        },
        "_styleName": "labelZoomRange",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#000000",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#000000",
        },
        "_styleName": "labelColor",
      }
    }
    swatches={
      Array [
        "#119793",
        "#7ce4e0",
        "#2e84ff",
        "#8cbeff",
        "#e94489",
        "#ff94ba",
        "#f3443a",
        "#ff9c8f",
        "#b78801",
        "#fbc851",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleSizeEditor
    defaultDynamicStyleOptions={
      Object {
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
        "maxSize": 32,
        "minSize": 7,
      }
    }
    defaultStaticStyleOptions={
      Object {
        "size": 14,
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticSizeProperty {
        "_options": Object {
          "size": 14,
        },
        "_styleName": "labelSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleColorEditor
    defaultDynamicStyleOptions={
      Object {
        "color": "Blues",
        "colorCategory": "palette_0",
        "field": undefined,
        "fieldMetaOptions": Object {
          "isEnabled": true,
          "sigma": 3,
        },
      }
    }
    defaultStaticStyleOptions={
      Object {
        "color": "#FFFFFF",
      }
    }
    disabled={true}
    disabledBy="labelText"
    fields={Array []}
    onDynamicStyleChange={[Function]}
    onStaticStyleChange={[Function]}
    styleProperty={
      StaticColorProperty {
        "_options": Object {
          "color": "#FFFFFF",
        },
        "_styleName": "labelBorderColor",
      }
    }
    swatches={
      Array [
        "#119793",
        "#7ce4e0",
        "#2e84ff",
        "#8cbeff",
        "#e94489",
        "#ff94ba",
        "#f3443a",
        "#ff9c8f",
        "#b78801",
        "#fbc851",
        "#000",
        "#FFF",
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <VectorStyleLabelBorderSizeEditor
    disabled={true}
    disabledBy="labelText"
    handlePropertyChange={[Function]}
    styleProperty={
      LabelBorderSizeProperty {
        "_labelSizeProperty": StaticSizeProperty {
          "_options": Object {
            "size": 14,
          },
          "_styleName": "labelSize",
        },
        "_options": Object {
          "size": "SMALL",
        },
        "_styleName": "labelBorderSize",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    display="columnCompressed"
  >
    <EuiSwitch
      checked={true}
      compressed={true}
      label="Apply global time to style metadata requests"
      onChange={[Function]}
    />
  </EuiFormRow>
</Fragment>
`;
